<resources>
    <string name="app_name">StoriBank</string>
    <string name="hello">¡Hola!</string>
    <string name="intro1">Tu nueva historia comienza aquí,</string>
    <string name="intro2">elege una opción:</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="start_login">Iniciar sesión</string>
    <string name="login">INICIO</string>
    <string name="register">REGISTRO</string>
    <string name="intro3">Crea tu historia junto con nosotros</string>
    <string name="name">Nombre</string>
    <string name="complete_all_field">Completa todos los campos</string>
    <string name="password_not_equals">Las contraseñas no coinciden</string>
    <string name="weak_password">"La contraseña no es válida, debe tener al menos 6 caracteres. "</string>
    <string name="credentials_not_valid">Las credenciales no son válidas. Pruebe con credenciales válidas</string>
    <string name="user_already_exists">"La dirección de correo electrónico ya está en uso por otra cuenta "</string>
    <string name="camera_needs">Necesitas tomar una foto de tu identificación para continuar</string>
    <string name="congrats">Felicitaciones</string>
    <string name="continue_next">Continuar</string>
    <string name="congrats_intro_2">Tu cuenta ha sido creada exitosamente</string>
    <string name="congrats_intro_1">Has dado tu primer paso</string>
    <string name="total_balance">Balance Total</string>
    <string name="today">El día de hoy</string>
    <string name="moreStatistics">+Estadísticas</string>
    <string name="financial_situation">Situación financiera</string>
    <string name="amount">Monto:</string>
</resources>