<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.congrats.CongratsFragment">

    <TextView
        android:id="@+id/strCongrats"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginBottom="4dp"
        android:text="@string/congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animPig"
        android:layout_width="match_parent"
        android:layout_height="@dimen/neutral_width"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/strIntro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strCongrats"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/save_money_animation" />

    <TextView
        android:id="@+id/strIntro1"
        style="@style/BodyBold"
        android:layout_width="@dimen/neutral_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/congrats_intro_1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/strIntro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/strIntro2"
        style="@style/Body"
        android:layout_width="@dimen/neutral_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/congrats_intro_2"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:padding="@dimen/medium_margin"
        android:text="@string/continue_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>