<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryDark"
    tools:context=".presentation.register.view.RegisterFragment"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/strHello"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginBottom="4dp"
        android:text="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strIntro3"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro3"
        app:layout_constraintStart_toStartOf="@+id/strHello"
        app:layout_constraintTop_toBottomOf="@+id/strHello" />

    <TextView
        android:id="@+id/strIntro2"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro2"
        app:layout_constraintStart_toStartOf="@+id/strIntro3"
        app:layout_constraintTop_toBottomOf="@+id/strIntro3"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizontal"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideUpVertical"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottomVertical"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <View
        android:id="@+id/viewCard"
        android:layout_width="@dimen/neutral_width"
        android:layout_height="@dimen/neutral_height"
        android:background="@drawable/view_register"
        app:layout_constraintBottom_toBottomOf="@+id/guideBottomVertical"
        app:layout_constraintEnd_toEndOf="@+id/guideHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideUpVertical" />

    <ImageView
        android:id="@+id/icMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/ic_big_bank"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideBottomVertical"
        app:layout_constraintEnd_toEndOf="@+id/guideHorizontal"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/strLogin"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnGoLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoLogin"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/btn_option"
        android:paddingStart="@dimen/medium_margin"
        android:paddingEnd="@dimen/medium_margin"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideUpVertical" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        app:cardCornerRadius="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="@id/guideBottomVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideUpVertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerTxtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/small_margin"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/small_margin"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <com.example.loadinganimation.LoadingAnimation
                    android:id="@+id/loadingAnim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:barType="@drawable/loading_anim"
                    app:enlarge="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerTxtPasswordOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPasswordOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/small_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerTxtPasswordTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPasswordTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/small_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:paddingStart="@dimen/small_margin"
        android:paddingEnd="@dimen/small_margin"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/cardLogin"
        app:layout_constraintEnd_toEndOf="@+id/cardLogin"
        app:layout_constraintStart_toStartOf="@+id/cardLogin"
        app:layout_constraintTop_toBottomOf="@+id/cardLogin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>