<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.view.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/background_gradient_animation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/neutral_height"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/ic_big_bank"
        android:backgroundTint="@color/primary"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/strTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/strTotal"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/neutral_height"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/graph"
        app:layout_constraintBottom_toTopOf="@+id/guideBottomVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideUpVertical"
        app:layout_constraintEnd_toEndOf="@+id/icMoney"
        app:layout_constraintStart_toStartOf="@+id/icMoney" />

    <TextView
        android:id="@+id/strTitle"
        style="@style/BodySmallBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="start"
        android:text="@string/total_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/strTotal"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@+id/strTotalToday"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="$ 10, 000" />

    <TextView
        android:id="@+id/strTotalToday"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:gravity="start"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@+id/guideUpVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchTotal"
        tools:ignore="TextContrastCheck"
        tools:text="- $10, 300" />

    <TextView
        android:id="@+id/strTodayLabel"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:gravity="start"
        android:text="@string/today"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@+id/guideUpVertical"
        app:layout_constraintStart_toEndOf="@+id/strTotalToday"
        app:layout_constraintTop_toTopOf="@+id/switchTotal"
        tools:ignore="TextContrastCheck" />

    <TextView
        style="@style/BodyBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:gravity="end"
        android:text="@string/moreStatistics"
        app:layout_constraintBottom_toTopOf="@+id/guideVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/neutral_height"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideVertical"
        tools:listitem="@layout/item_movement" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideUpVertical"
        android:layout_width="@dimen/guide_line_width"
        android:layout_height="@dimen/guide_line_width"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVertical"
        android:layout_width="@dimen/guide_line_width"
        android:layout_height="@dimen/guide_line_width"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottomVertical"
        android:layout_width="@dimen/guide_line_width"
        android:layout_height="@dimen/guide_line_width"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.loadinganimation.LoadingAnimation
            android:id="@+id/loadingAnim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barType="@drawable/loading_anim"
            app:enlarge="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>